[tool.poetry]
name = "azimutapi"
version = "0.1.0"
description = ""
authors = ["Jacopo Lerda <jacopolerda@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
numpy = "2.0.0rc2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
